[package]
name = "gridworld-rl"
version = "0.1.0"
authors = ["jrcalgo <jacksonr121@outlook.com"]
edition = "2024"
description = "A deep reinforcement learning 2D gridworld environment with single- and multi-agent support."
repository = "https://github.com/jrcalgo/relayrl-end2end"
documentation = "https://docs.rs/crate/gridworld-rl"
readme = "README.md"
keywords = ["rl", "environment", "gridworld"]
categories = ["science", "simulation", "command-line-utilities", "development-tools::testing", "development-tools::profiling"]
license = "Apache-2.0"

[lib]
name = "gridworld_rl"
crate-type = ["rlib"]

[dependencies]
relayrl-framework = { workspace = true }
iced = { workspace = true }