[package]
name = "gridworld-rl"
version = "0.1.1"
authors = ["jrcalgo <jacksonr121@outlook.com"]
edition = "2024"
description = "A deep reinforcement learning 2D gridworld environment with single- and multi-agent support."
repository = "https://github.com/jrcalgo/relayrl-end2end"
documentation = "https://docs.rs/gridworld-rl"
readme = "README.md"
keywords = ["relayrl", "rl", "environment", "gridworld", "learning"]
categories = ["science", "simulation", "command-line-utilities", "development-tools::testing", "development-tools::profiling"]
license = "Apache-2.0"

[lib]
name = "gridworld_rl"
crate-type = ["rlib"]

[features]
render = ["iced"]

[dependencies]
relayrl_framework = { workspace = true }
iced = { workspace = true, optional = true, features = ["canvas"] }

[[example]]
name = "render_test"
required-features = ["render"]

[[example]]
name = "render_test_multiagent"
required-features = ["render"]